# BI-platform-agent

./: README.md  main.py  pyproject.toml  test.py
agents/: classifier.py  deep_agent.py  llm.py  middleware.py  models.py  prompt_loader.py  sql_executor.py
agents/prompts/: AGENT.md  DOMAIN_CLASSIFIER.md  SQL_EXECUTOR.md
business/: skills.py
business/embeddings/: __init__.py  embedder.py
business/entity_config/: __init__.py  models.py  registry.py  utils.py
business/entity_resolution/: __init__.py  loader.py  models.py  normalizer.py  resolver.py  scorer.py
business/examples/: __init__.py  service.py
business/intent_learning/: __init__.py  agent.py  models.py  prompt.py  repository.py
business/orchestration/: __init__.py  chat_service.py
business/tools/: __init__.py  domain_summary.py  resolve_entity.py  sql_tools.py
business/workers/: __init__.py  entity_refresher.py  queue_worker.py
configs/: __init__.py  business.py  data.py  presentation.py
data/database/: __init__.py  connection.py
data/models/: __init__.py  entity.py  example.py  queue.py
data/redis/: __init__.py  client.py  entity_repository.py  example_repository.py  queue_repository.py
presentation/: lifecycle.py  schedulers.py
presentation/api/: __init__.py  app.py  container.py  dependencies.py  errors.py  schemas.py
skills/customer-finance/: SKILL.md  business_rules.md  entity_resolution.md  examples.md  finance_reference.md  sql_generation.md
skills/delivery/: SKILL.md  business_rules.md  (+4 more)
tests/: conftest.py  test_app_boots.py  test_chat_smoke.py  test_sql_guard.py
(+32 files in other folders)
