[project]
name = "project4"
version = "0.1.0"
description = "Multi-client SQL chat application with 3-tier architecture"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.3",
    "deepagents>=0.6.12",
    "fastapi>=0.115.0",
    "langchain>=1.3.14",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "numpy>=2.5.1",
    "openai>=1.50.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "rapidfuzz>=3.14.5",
    "redis[hiredis]>=8.0.1",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "httpx2>=2.7.0",
    "pytest>=9.1.1",
]
